Create agency router
