# server.js
@@ -9,10 +9,12 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const pantryRouter = require('./api/controllers/routes/pantries');
 const taxonomyRouter = require('./api/controllers/routes/taxonomy');
+const agencyRouter = require('./api/controllers/routes/agency');
+
 
 app.use('/api/v1/pantries', pantryRouter);
 app.use('/api/v1/taxonomy', taxonomyRouter);
-
+app.use('/api/v1/agency', agencyRouter);
 
 app.listen(port);
 
