# swagger.yaml
@@ -155,6 +155,56 @@ paths:
         "200":
           description: "Successfully queries the smart city datasets and returns the results"
 
+  /agency:
+    get:
+      tags:
+        - "Agencies"
+      summary: "Returns a list of Agencies"
+      parameters:
+        - name: limit
+          in: query
+          required: false
+          description: "The maximum number of results returned"
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+            default: 100
+        - name: pageNumber
+          in: query
+          required: false
+          description: "The page number of the data to be returned"
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+            default: 1
+        - name: taxonomyId
+          in: query
+          required: false
+          description: "Taxonomy ID for agency"
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: "Successfully queries the smart city datasets and returns the results"
+  /agency/{id}:
+    get:
+      tags:
+        - "Agencies"
+      summary: "Returns agency record for the given ID"
+      parameters:
+        - name: ID
+          in: path
+          required: true
+          description: "The ID of the agency to return"
+          schemea:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: "Successfully queries the smart city datasets and returns the results"
 externalDocs:
   description: "Find out more about the API"
   url: "https://github.com/SCODEMeetup/mofb-api"
